After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677943 - DnD of notebook tabs lead to Gtk-WARNING
DnD of notebook tabs lead to Gtk-WARNING
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.5.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2012-06-12 13:22 UTC by Debarshi Ray
Modified: 2012-06-23 14:03 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Debarshi Ray 2012-06-12 13:22:51 UTC
Start gedit-3.4.2 with gtk+ 3.5.4 as:
$ G_DEBUG=fatal-warnings /usr/bin/gedit

Open two tabs. Drag one of them out of the window so that a new window is created. Crash!


(gedit:20451): Gtk-WARNING **: GeditNotebook 0x1f75530 is mapped but visible child GeditTabLabel 0x1fbdea0 is not mapped

(gdb) bt
  • #0 g_logv
    at gmessages.h line 101
  • #1 g_log
    at gmessages.c line 792
  • #2 gtk_widget_verify_invariants
    at gtkwidget.c line 8551
  • #3 gtk_widget_pop_verify_invariants
    at gtkwidget.c line 8617
  • #4 gtk_widget_unmap
    at gtkwidget.c line 4240
  • #5 g_closure_invoke
    at gclosure.c line 777
  • #6 signal_emit_unlocked_R
    at gsignal.c line 3477
  • #7 g_signal_emit_valist
    at gsignal.c line 3296
  • #8 g_signal_emit
    at gsignal.c line 3352
  • #9 gtk_widget_unmap
    at gtkwidget.c line 4238
  • #10 gtk_window_hide
    at gtkwindow.c line 4900
  • #11 g_closure_invoke
    at gclosure.c line 777
  • #12 signal_emit_unlocked_R
    at gsignal.c line 3477
  • #13 g_signal_emit_valist
    at gsignal.c line 3296
  • #14 g_signal_emit
    at gsignal.c line 3352
  • #15 gtk_widget_hide
    at gtkwidget.c line 4109
  • #16 gtk_widget_hide
    at gtkwidget.c line 4087
  • #17 gtk_drag_remove_icon
    at gtkdnd.c line 4000
  • #18 gtk_drag_source_info_destroy
    at gtkdnd.c line 4029
  • #19 gtk_drag_drop_finished
    at gtkdnd.c line 3708
  • #20 gtk_drag_button_release_cb
    at gtkdnd.c line 4470
  • #21 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #22 _g_closure_invoke_va
    at gclosure.c line 840
  • #23 g_signal_emit_valist
    at gsignal.c line 3207
  • #24 g_signal_emit
    at gsignal.c line 3352
  • #25 gtk_widget_event_internal
    at gtkwidget.c line 6289
  • #26 gtk_widget_event
    at gtkwidget.c line 5946
  • #27 propagate_event_up
    at gtkmain.c line 2391
  • #28 propagate_event
    at gtkmain.c line 2491
  • #29 gtk_main_do_event
    at gtkmain.c line 1714
  • #30 gdk_event_source_dispatch
    at gdkeventsource.c line 358
  • #31 g_main_dispatch
    at gmain.c line 2539
  • #32 g_main_context_dispatch
    at gmain.c line 3075
  • #33 g_main_context_iterate
    at gmain.c line 3146
  • #34 g_main_loop_run
    at gmain.c line 3340
  • #35 gtk_main
    at gtkmain.c line 1162
  • #36 main

Comment 1 Debarshi Ray 2012-06-12 13:49:49 UTC
I can find this in gtk+ 3.5.2 as well.